--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   </head>
   <body>
     <canvas id="canvas" width="800" height="600" class="noSmooth"></canvas>
-    <script src="js/GraphicsCommon.js" charset="utf-8"></script>
-    <script src="js/Main.js" charset="utf-8"></script>
+    <script src="js/core/GraphicsCommon.js" charset="utf-8"></script>
+    <script src="js/core/AssetLoader.js" charset="utf-8"></script>
+    <script src="js/core/Main.js" charset="utf-8"></script>
   </body>
 </html>
