--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <canvas id="canvas" width="800" height="600" class="noSmooth"></canvas>
     <script src="js/core/GraphicsCommon.js" charset="utf-8"></script>
     <script src="js/core/AssetLoader.js" charset="utf-8"></script>
+
+    <script src="js/core/Input.js" charset="utf-8"></script>
+
     <script src="js/core/Main.js" charset="utf-8"></script>
   </body>
 </html>
