Remade from template

--- a/index.html
+++ b/index.html
@@ -2,18 +2,20 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Coding-Pirate</title>
+    <title>Yea</title>
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
-    <canvas id="canvas" width="800" height="600" class="noSmooth"></canvas>
-    <script src="js/core/GraphicsCommon.js" charset="utf-8"></script>
-
-    <script src="js/core/Input.js" charset="utf-8"></script>
-
-    <script src="js/core/AssetLoader.js" charset="utf-8"></script>
-    <script src="js/core/MapHandler.js" charset="utf-8"></script>
-
-    <script src="js/core/Main.js" charset="utf-8"></script>
+    <canvas id="gameCanvas" width="800" height="600"  class="noSmooth"></canvas>
+    <script src="js/Util.js" charset="utf-8"></script>
+    <script src="js/GraphicsCommon.js" charset="utf-8"></script>
+    <script src="js/AssetLoader.js" charset="utf-8"></script>
+    <script src="js/Bullet.js" charset="utf-8"></script>
+    <script src="js/BulletManager.js" charset="utf-8"></script>
+    <script src="js/Player.js" charset="utf-8"></script>
+    <script src="js/MapHandler.js" charset="utf-8"></script>
+    <script src="js/Camera.js" charset="utf-8"></script>
+    <script src="js/Input.js" charset="utf-8"></script>
+    <script src="js/Main.js" charset="utf-8"></script>
   </body>
 </html>
