--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src="js/AssetLoader.js" charset="utf-8"></script>
     <script src="js/Bullet.js" charset="utf-8"></script>
     <script src="js/BulletManager.js" charset="utf-8"></script>
+    <script src="js/WeaponsManager.js" charset="utf-8"></script>
     <script src="js/Player.js" charset="utf-8"></script>
     <script src="js/MapHandler.js" charset="utf-8"></script>
     <script src="js/Camera.js" charset="utf-8"></script>
